# click

./: .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: push-actions.yml  release.yml
src/: CHANGELOG.md  certs.rs  cmd.rs  command_processor.rs  completer.rs  config.rs  connector.rs  crd.rs  describe.rs  duct_mock.rs  env.rs  error.rs  k8s.rs  k8s_table.rs  kobj.rs  kube.rs  main.rs  output.rs  parser.rs  styles.rs  subjaltnames.rs  table.rs  values.rs
src/command/: alias.rs  click.rs  command_def.rs  configmaps.rs  copy.rs  crds.rs  cronjobs.rs  daemonsets.rs  delete.rs  deployments.rs  describe.rs  events.rs  exec.rs  jobs.rs  logs.rs  mod.rs  namespaces.rs  nodes.rs  pods.rs  portforwards.rs  replicasets.rs  rollouts.rs  secrets.rs  services.rs  statefulsets.rs  storage.rs  volumes.rs
src/config/: click.rs  kube.rs  kubefile.rs  mod.rs
src/describe/: crd.rs  legacy.rs  mod.rs  service.rs
util/: fix_bad_der.sh
