[package]
name = "click"
version = "0.5.1"
description = "A command-line REPL for Kubernetes that integrates into existing cli workflows"
authors = ["Nick Lanham <nick@afternight.org>"]
homepage = "https://github.com/databricks/click/wiki"
repository = "https://github.com/databricks/click"
license = "Apache-2.0"
readme = "README.md"
keywords = ["kubernetes", "repl", "click", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

[badges]
travis-ci = { repository = "databricks/click" }

[dependencies]
ansi_term = "^0.12"
atomicwrites = "^0.2"
base64 = "^0.11"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.33"
ctrlc = "^3.1"
der-parser = "0.3"
dirs = "^2.0"
duct = "^0.13"
duct_sh = "^0.1"
env_logger = "0.7.1"
humantime = "^1.3"
hyper = "0.10"
hyper-sync-rustls = "0.3.0-rc.4"
lazy_static = "^1.4"
log = "^0.4"
os_pipe = "^0.9"
prettytable-rs = "^0.8"
regex = "^1.3"
ring = "0.16"
rustls = { version = "0.16", features = ["dangerous_configuration"] }
rustyline = "^5.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.8"
tempdir = "^0.3"
term = "^0.5"
untrusted = "^0.7"
webpki = "^0.21"
strfmt = "0.1.6"