[package]
name = "click"
version = "0.5.4"
description = "A command-line REPL for Kubernetes that integrates into existing cli workflows"
authors = ["Nick Lanham <nick@afternight.org>"]
homepage = "https://github.com/databricks/click/wiki"
repository = "https://github.com/databricks/click"
license = "Apache-2.0"
readme = "README.md"
keywords = ["kubernetes", "repl", "click", "cli"]
categories = ["command-line-interface", "command-line-utilities"]
edition = "2021"

[badges]
travis-ci = { repository = "databricks/click" }

[features]
argorollouts = [] # enable the `rollouts` command to view argo rollouts

[dependencies]
ansi_term = "^0.12"
atomicwrites = "^0.3"
base64 = "^0.13"
bytes = "1.0.1"
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "^3.1", features = ["cargo", "color"] }
ctrlc = "^3.1"
dirs = "^4.0"
duct = "^0.13"
duct_sh = "^0.13"
env_logger = "^0.9"
humantime = "^2.1"
k8s-openapi = { version = "0.12.0", features = ["v1_14"] }
lazy_static = "^1.4"
os_pipe = "^0.9"
p12 = "^0.2"
pem = "^1.0"
prettytable-rs = "^0.8"
regex = "^1.3"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustyline = "^9.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = "1.11.0"
serde_yaml = "^0.8"
strfmt = "0.1.6"
reqwest = { version = "0.11", features = ["blocking", "json", "default-tls", "rustls-tls", "native-tls"] }
tempdir = "^0.3"
term = "^0.5" # requires prettytable to update to newer version
tokio = { version = "1", features = ["full"] }
url = "^2.2"
yasna = "^0.4"
