[package]
name = "click"
version = "0.6.3"
description = "A command-line REPL for Kubernetes that integrates into existing cli workflows"
authors = ["Nick Lanham <nick@afternight.org>"]
homepage = "https://github.com/databricks/click/wiki"
repository = "https://github.com/databricks/click"
license = "Apache-2.0"
readme = "README.md"
keywords = ["kubernetes", "repl", "click", "cli"]
categories = ["command-line-interface", "command-line-utilities"]
edition = "2021"

[badges]
travis-ci = { repository = "databricks/click" }

[features]
argorollouts = [] # enable the `rollouts` command to view argo rollouts

[dependencies]
atomicwrites = "^0.4"
base64 = "^0.21"
bytes = "1.0.1"
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "^3.1", features = ["cargo", "color"] }
comfy-table = "^6.0"
crossterm = "^0.26"
ctrlc = "^3.1"
derivative = "2.2.0"
dirs = "^5.0"
duct = "^0.13"
duct_sh = "^0.13"
env_logger = "^0.10"
humantime = "^2.1"
k8s-openapi = { version = "0.14.0", features = ["v1_23"] }
lazy_static = "^1.4"
os_pipe = "^1.0"
p12 = "^0.6"
pem = "^2.0"
regex = "^1.3"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustyline = "^11.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = "^3.0"
serde_yaml = "^0.9"
strfmt = "^0.2"
reqwest = { version = "0.11", features = ["blocking", "json", "default-tls", "rustls-tls", "native-tls"] }
tempdir = "^0.3"
tokio = { version = "1", features = ["full"] }
url = "^2.2"
yasna = "^0.5"
